# cka-repina-aya23

./: README.md  pyproject.toml
scr/: aya_qlora_cka_repina.py
scripts/: bhili_hindi.sh  bhili_hindi_base.sh  bhili_hindi_only_repina.sh  mundari_english.sh  mundari_english_only_repina.sh  santali_english.sh  santali_english_base.sh  santali_english_only_repina.sh
src/: aya_qlora_cka_repina.py
treplina/: cli.py  trainer.py
