[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "treplina"  # ← これが pip install 名
version = "0.1.0"
description = "Layer-wise CKA+REPINA alignment for Aya-23 (TRepLiNa)."
readme = "README.md"
authors = [
  { name = "Toshiki Nakai", email = "you@example.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["treplina", "cka", "repina", "multilingual", "llm", "aya-23"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "torch",
  "transformers",
  "datasets",
  "pandas",
  "sacrebleu",
  "peft",
  "huggingface_hub",
  "bitsandbytes",
]

[project.urls]
Homepage = "https://github.com/tona3738/cka-repina-aya23"

[project.scripts]
treplina-train = "treplina.cli:main"
